--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.3",
@@ -26,7 +30,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jquery": "^3.6.4",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.10.0",
